@@ -1,3 +1,10 @@
+2014-12-23  Ola Jeppsson  <ola@adapteva.com>
+
+	* src/e-hal/src/epiphany-hal.c (static inline void *aligned_memcpy):
+	Implemented wrapper that only calls memcpy when src dst and size
+	are 32 bit WORD aligned.
+	(ssize_t ee_write_buf): Use aligned_memcpy() instead of memcpy().
+
 2014-12-04  Ola Jeppsson  <ola@adapteva.com>
 
 	* bsps/parallella64/platform.hdf: Adjust ESYS register base to
@@ -200,4 +207,3 @@
 	(function build-utils): Implement make-based build.
 	(function build-lib): Implement make-based build.
 	(function usage): Added a clean build (-c) option.
-
